--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -38,7 +38,23 @@ Hay una gran cantidad de herramientas para el control de versiones en la tienda 
 \subsection{Alternativas descartadas}
 
 \subsubsection{Jira}
-~\href{https://www.atlassian.com/es/software/jira}{Jira} es una herramienta web propietaria, para el control, seguimiento de errores e incidencias, dentro de la gestión de proyectos. La conozco porque la usé durante las prácticas curriculares, me gustaba mucho, pero no me parece cómoda para lo que quería hacer. Ya que esta herramienta esta orientada en la mejora de procesos dentro de la empresa, que a desarrollo de software.
+~\href{https://www.atlassian.com/es/software/jira}{Jira} es una herramienta web propietaria, para el control, seguimiento de errores e incidencias, dentro de la gestión de proyectos. La conozco porque la usé durante las prácticas curriculares, me gustaba mucho, pero no me parece cómoda para lo que quería hacer. Ya que esta herramienta esta orientada en la mejora de procesos en la empresa, que al desarrollo de software.
 
 \subsubsection{Trello}
 ~\href{https://trello.com/es}{Trello} es una herramienta de gestión de proyectos, con interfaz móvil y web. Usa el sistema kanban como Zenhub~\pageref{zenhub} y tiene integración con Github~\pageref{github}, pero me parece que no encaja en proyectos unipersonales, como era mi caso. Ya que el enfoque es más colaborativo, con grandes grupos de trabajo, donde es necesario compartir documentos con los requisitos, etc ...
+
+\section{Entorno de desarrollo integrado (IDE)}
+
+\subsection{Opción elegida}
+
+\subsubsection{Visual Studio Code}
+~\href{https://code.visualstudio.com/}{Visual Studio Code} es un editor de código fuente desarrollado por Microsoft, cuya licencia es MIT. Esta es totalmente gratuita, con una cantidad enorme de extensiones o \emph{pluggins}, que minimizan esfuerzos, además de la integración con git, que permite ver los cambios en tiempo real. 
+
+Esta facilidad de uso hicieron que me decantase por él.
+
+\subsection{Alternativas descartadas}
+
+\subsubsection{Android Studio}
+~\href{https://developer.android.com/studio}{Android Studio} es la herramienta oficial de desarrollo de aplicaciones móviles para el sistema operativo Android. Este sustituye a Eclipse como el IDE, cuya licencia es Apache 2.0.
+
+Este IDE se descarta para la creación de código, pero no para las máquinas virtuales.
