--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -1,7 +1,28 @@
 \capitulo{4}{Técnicas y herramientas}
 
 Esta parte de la memoria tiene como objetivo presentar las técnicas metodológicas y las herramientas de desarrollo que se han utilizado para llevar a cabo el proyecto. Se comentará de manera breve, las diferentes opciones y la razón porque estás fueron descartadas.
- 
+
+\section{Sistema Operativo}
+
+\subsection{Opciones elegidas}
+
+\subsubsection{Microsoft}
+~\href{https://www.microsoft.com/es-es}{Microsoft} es el sistema operativo generalista. Es de sobra conocido, con sus pros y contras. Fue elegido por comodidad, ya que es el que tengo instalado en mis ordenadores. Además el IDE usado~\pageref{visual} para el desarrollo, será de la misma compañía, por lo que hay mayor optimización para este sistema.
+
+\subsubsection{Android}
+~\href{https://www.android.com/intl/es_es/}{Andorid} es un sistema operativo móvil desarrollado por Google. Está basado en el kernel de Linux. Tiene la casi toda la cuota de mercado de telefonía. Este se ha usado en mi \emph{smartphone} personal con el fin de probar las aplicaciones en dispositivo físicos.
+
+\subsection{Alternativas descartadas}
+
+\subsubsection{Ubuntu}
+~\href{https://ubuntu.com/}{Ubuntu} es un sistema operativo de código abierto, distribuido bajo una licencia libre. Está basado en Debian, distribución de Linux. Se desarta porque no iba a instalar otro sistema operativo en mis ordenadores personales.
+
+
+\subsubsection{macOS X}
+~\href{https://www.apple.com/es/macos}{macOs} sistema operativo creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Pero en el caso de que se quiera desarrollar para iOS~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar tira de las librerías internas del sistema operativo.
+
+\subsubsection{iOS}
+~\href{https://www.apple.com/es/macos}{macOs} sistema operativo para \emph{smartphones} creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Pero en el caso de que se quiera desarrollar para iOS~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar tira de las librerías internas del sistema operativo.
 \section{Control de versiones}
 
 \subsection{Opciones elegidas}
@@ -35,6 +56,12 @@ Hay una gran cantidad de herramientas para el control de versiones en la tienda 
 \subsubsection{Zenhub}\label{zenhub}
 ~\href{https://bitbucket.org/product//}{Zenhub} es una herramienta de gestión de proyectos, que viene por defecto integrada en Github~\pageref{github}, lo que implica a usarla sin pensarlo mucho. En mi caso lo que más usé fue el tablero de \emph{kanban} donde poder ver las \emph{issues} que me planificaba para cada \emph{sprint}. Ofrece diferentes tipos de gráficos, el que mejor se encajaba a la planificación fue de \emph{burndown}, ya que me permite ver lo ideal del proyecto y la progresión que llevo. No me gustó que las tareas las cierra por días en vez de por horas.
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1\textwidth]{teoria/kanban.png}
+	\caption{Herramienta Zenhub}\label{fig:zenhub}
+\end{figure}
+
 \subsection{Alternativas descartadas}
 
 \subsubsection{Jira}
@@ -47,14 +74,31 @@ Hay una gran cantidad de herramientas para el control de versiones en la tienda 
 
 \subsection{Opción elegida}
 
-\subsubsection{Visual Studio Code}
+\subsubsection{Visual Studio Code}~\label{visual}
 ~\href{https://code.visualstudio.com/}{Visual Studio Code} es un editor de código fuente desarrollado por Microsoft, cuya licencia es MIT. Esta es totalmente gratuita, con una cantidad enorme de extensiones o \emph{pluggins}, que minimizan esfuerzos, además de la integración con git, que permite ver los cambios en tiempo real. 
 
 Esta facilidad de uso hicieron que me decantase por él.
 
 \subsection{Alternativas descartadas}
 
-\subsubsection{Android Studio}
-~\href{https://developer.android.com/studio}{Android Studio} es la herramienta oficial de desarrollo de aplicaciones móviles para el sistema operativo Android. Este sustituye a Eclipse como el IDE, cuya licencia es Apache 2.0.
+\subsubsection{Android Studio}\label{androidstudio}
+~\href{https://developer.android.com/studio}{Android Studio} es la herramienta oficial de desarrollo de aplicaciones móviles para el sistema operativo Android. La licencia es Apache 2.0. y sustituye a Eclipse~\pageref{eclipse} como el entorno de desarrollo preferido por Google.
 
 Este IDE se descarta para la creación de código, pero no para las máquinas virtuales.
+
+\subsubsection{Eclipse}~\label{eclipse}
+~\href{https://www.eclipse.org/}{Eclipse} es la plataforma software compuesta de varias herramientas de programación de código abierto. Se descartó por ser un IDE no recomendado por parte de Google. Además que a mi parecer es algo tosco.
+
+\section{Entorno de virtualización}
+
+\subsection{Opción elegida}
+
+\subsubsection{Visual Studio Code}
+~\href{https://developer.android.com/studio}{Android Studio}~\pageref{androidstudio} fue elegido para el despliegue de la aplicación en las máquinas virtuales que ofrece este IDE. Es eficiente y simple, centrado en Android. La creación de las VM es muy cómoda, ya que tiene todo integrado, (con cuatro clicks de ratón se puede lanzar una).
+
+Sumado a que algunas herramientas de Visual Studio Code tiran de estas máquinas, hace que sea la opción más recomendable.
+
+\subsection{Alternativas descartadas}
+
+\subsubsection{Virtual Box}
+~\href{https://www.virtualbox.org/}{Virtual Box} es un software de virtualización desarrollado por Oracle. Es de sobra conocido, ya que lo hemos usado durante el grado. Puede desplegar Android, pero al no estar integrado en el desarrollo de aplicaciones, se descató.
