Tecnicas y herramientas 6 closes #53

--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -128,10 +128,13 @@ Es un servicio de correo electrónico proporcionado pro Google. Se descarta porq
 %% Herramientas para latex
 \section{Documentación}
 
-\subsection{Opción elegida}
+\subsection{Opciones elegidas}
 
 \subsubsection{TexStudio}
 ~\href{https://www.texstudio.org/}{TexStudio} es un editor de Latex de código abierto, licencia GNU, muy similar a texmaker~\pageref{textmaker}, ya que es un \emph{fork} de este. Lo que hizo decantarme por el fue la corrección ortográfica interactiva y resaltado de la sintaxis.
+
+\subsubsection{Zotero}
+~\href{https://www.zotero.org/}{Zotero} es un gestor de referencias bibliográficas, cuya licencia es AGPL, siendo gratuito. Tiene una extensión para el navegador que ayuda mucho.
 
 \subsection{Alternativas descartadas}
 
@@ -170,15 +173,33 @@ Marco de trabajo para el desarrollo ágil de software, implementando una estrate
 \subsection{Desarrollo en cascada}
 Es un desarrollo en secuencia, es decir, una vez se pasa de etapa, no se puede volver atrás, se divide en \emph{steps} muy diferenciados, que se adapta my bien con las metodologías ágiles. 
 
-
-\begin{figure}
+\begin{figure}[h]
 	\centering
-	\includegraphics[height=0.7\textwidth]{teoria/cascada.png}
-	\caption{Cascada}\label{fig:cascada}
+	\includegraphics[width=0.8\textwidth]{teoria/cascada.png}
+	\caption{Desarrollo en cascada}\label{fig:cascada}
 \end{figure}
 
+\subsection{Bolígrafo y cuaderno}
+Para mi la parte más importante de toda la gestión del proyecto, reuniones, diseño de las interfaces, control de las horas, planificación, caja negra ... 
 
+Siempre lo he tenido a mi lado como soporte, como se puede ver ~\ref{fig:soporte}:
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1 \textwidth]{teoria/soporte.jpeg}
+	\caption{Cuaderno}\label{fig:soporte}
+\end{figure}
+
+\section{Bibliotecas}
+
+\subsection{Material Design}
+Es una normativa de diseño o guía de estilos para garantizar una homogeneidad en la visualización dentro de Android. Está desarrollada por Google.
+
+\subsection{Firebase}
+Plataforma para el desarrollo de aplicaciones móviles, creada por Google en el 2014. Dispone de una gran cantidad de herramientas de mucha calidad.
+
+\subsection{Play Services }
+Librería que permite usar a terceros todas las herramientas ofrecidas por Google.
 
 
 
