--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -137,6 +137,29 @@ Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/f
 
 Para el cierre el total de las tareas fueron completadas, se planificaron 41 horas, destinando 33 horas para el desarrollo esperado.
 
+\subsection{Sprint 5 (11/07/20 - 115/07/20)}\label{sprint-5-11072020---15072020}
+Para este \emph{Sprint} la idea es terminar los anexos, pulir el despliegue de la aplicación en la \emph{Play Store} y resolver los problemas finales.
+
+Los objetivos para este \emph{sprint} son:
+\begin{itemize}
+	\item Actualizar el contenido de la \emph{Play Store}
+	\item Planificar el sprint.
+	\item Plan de proyectos anexos.
+	\item Requisitos anexos.
+	\item Diseño anexos.
+	\item Manual del programador anexos.
+	\item Manual de usuario anexos.
+	\item Reunión de seguimiento.
+	\item Solucionar el problema al compilar la memoria, ya que no se ve.
+	\item Problemas menores.
+\end{itemize}
+
+Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/flutter_serpiente/milestone/5?closed=1}{Sprint 5}
+
+\imagen{burndowns/sp5.png}{Sprint 5.}
+
+Para el cierre el total de las tareas fueron completadas, se planificaron 41 horas, destinando 33 horas para el desarrollo esperado.
+
 \section{Estudio de viabilidad}
 
 Es esta parte se pretende analizar el coste / beneficio, como el apartado legal, en todo el proceso de desarrollo, en el caso de que se hubiera tenido que realizar en un entorno real. 
