ASpectos relevantes del desarrollo de la memoria #54

--- a/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -1,7 +1,12 @@
 \capitulo{5}{Aspectos relevantes del desarrollo del proyecto}
 
-Este apartado pretende recoger los aspectos más interesantes del desarrollo del proyecto, comentados por los autores del mismo.
-Debe incluir desde la exposición del ciclo de vida utilizado, hasta los detalles de mayor relevancia de las fases de análisis, diseño e implementación.
-Se busca que no sea una mera operación de copiar y pegar diagramas y extractos del código fuente, sino que realmente se justifiquen los caminos de solución que se han tomado, especialmente aquellos que no sean triviales.
-Puede ser el lugar más adecuado para documentar los aspectos más interesantes del diseño y de la implementación, con un mayor hincapié en aspectos tales como el tipo de arquitectura elegido, los índices de las tablas de la base de datos, normalización y desnormalización, distribución en ficheros3, reglas de negocio dentro de las bases de datos (EDVHV GH GDWRV DFWLYDV), aspectos de desarrollo relacionados con el WWW...
-Este apartado, debe convertirse en el resumen de la experiencia práctica del proyecto, y por sí mismo justifica que la memoria se convierta en un documento útil, fuente de referencia para los autores, los tutores y futuros alumnos.
+En este apartado se recogen los aspectos más importantes o relevantes del desarrollo del proyecto. Desde las decisiones tomadas y las implicaciones que conlleva. Además de los problemas que fueron surgiendo.
+
+\section{Comienzo del trabajo final de grado}
+La idea de mi proyecto, surge de la noche a al mañana, porque el problema es que era 20 de Julio y no tenía nada que entregar, ya que iba a hacer otro proyecto en Knime, dejándolo para otro curso. 
+
+Pero no podía dejar pasar una oportunidad. Fue más una falta de motivación y de malas sensaciones que otra cosa.
+
+Por lo que me decidí estudiar como estaba el mercado de la programación móvil, descubriendo Flutter. Me gustó mucho, todo lo que se comentaba sobre este \emph{Framework}, eran cosas buenas, que era algo nuevo y sobretodo lo que más me decidió a cogerlo, es el respaldo que le daba Google.
+
+Esto se lo comenté a mis tutores de trabajo final de grado, dándome el visto bueno, pero que tenía que trabajar mucho para llegar a la calidad esperada. Por lo que era un reto enorme al que me enfrentaba, pero como digo no se pueden dejar pasar las oportunidades, además que por otra parte lo que más me incentivaba, es a la hora de buscar trabajo no decir que solo me quedaba el TFG. Ya que muchas de las empresas me decían que me esperaban a que terminase para luego cogerme. Y yo no podía esperar porque si no hacía e TFG, quería trabajar para no tener que pensar en esto. Por lo que me encontraba entre la 'espada y la pared'.
