ASpectos relevantes del desarrollo de la memoria  2 #54

--- a/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -9,4 +9,10 @@ Pero no podía dejar pasar una oportunidad. Fue más una falta de motivación y 
 
 Por lo que me decidí estudiar como estaba el mercado de la programación móvil, descubriendo Flutter. Me gustó mucho, todo lo que se comentaba sobre este \emph{Framework}, eran cosas buenas, que era algo nuevo y sobretodo lo que más me decidió a cogerlo, es el respaldo que le daba Google.
 
-Esto se lo comenté a mis tutores de trabajo final de grado, dándome el visto bueno, pero que tenía que trabajar mucho para llegar a la calidad esperada. Por lo que era un reto enorme al que me enfrentaba, pero como digo no se pueden dejar pasar las oportunidades, además que por otra parte lo que más me incentivaba, es a la hora de buscar trabajo no decir que solo me quedaba el TFG. Ya que muchas de las empresas me decían que me esperaban a que terminase para luego cogerme. Y yo no podía esperar porque si no hacía e TFG, quería trabajar para no tener que pensar en esto. Por lo que me encontraba entre la 'espada y la pared'.
+Esto se lo comenté a mis tutores de trabajo final de grado, dándome el visto bueno, pero que tenía que trabajar mucho, para llegar a la calidad esperada. Por lo que era un reto enorme al que me enfrentaba, pero como digo, no se pueden dejar pasar las oportunidades, además que por otra parte lo que más me incentivaba, es a la hora de buscar trabajo, no decir que solo me quedaba el TFG. 
+
+Ya que muchas de las empresas me decían que me esperaban a que terminase, para luego cogerme. Y yo no podía esperar, porque si no hacía el TFG, debía de trabajar para no tener que pensar en esto. Por lo que me encontraba entre la 'espada y la pared'.
+
+Por lo que muchas gracias a mis tutores, por haberme dejado cambiar de proyecto, por animarme a conseguirlo y darme el soporte necesario.
+
+Finalmente hice un curso en Udemy, de unas 40 horas en dos días y medio para conocer la herramienta, ya que empezaba con los conocimientos que aporta la carrera nada más.
