ASpectos relevantes del desarrollo de la memoria 4 closes #54

--- a/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -73,10 +73,13 @@ Y las métricas de usuario si que funcionan~\ref{fig:metricas}, por lo que la in
 	\caption{Métricas usuarios}\label{fig:metricas}
 \end{figure}
 
-Tras investigar y realizar gran cantidad de pruebas creo que el problema puede estar en que no tengo métodos de cobro de ingresos. Pero es que la propia consola web de admob, no me deja introducir un método, como se puede ver en la imagen~\ref{fig:pagos}:
+Tras investigar y realizar gran cantidad de pruebas creo que el problema puede estar en que no tengo métodos de cobro de ingresos. Por lo tanto la propia Google ni se molesta en poner anuncios. Pero es que la propia consola web de admob, no me deja introducir un método de pago, como se puede ver en la imagen~\ref{fig:pagos}:
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{teoria/pagos.png}
 	\caption{Pagos adMob no van}\label{fig:pagos}
 \end{figure}
+
+
+
